--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="armorate, first, testing, test, html, website">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important definition for website look on defferent platforms -->
-    <title>Test Doc</title>
+    <title>armorate</title>
     <style>
     h1  {color:blue; font-size: 25px;}
     p   {font-size: 19px;}
@@ -20,8 +20,8 @@
     <header>
         <nav> <!-- navigation tag -->
             <p id="#top">this is top</p> <!-- id element is used to create identity of a particular tag-->
-            <a href="https://en.wikipedia.org/wiki/Main_Page" > <!-- anchor tag -->
-                <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/>
+            <a href="https://github.com/armorate" > <!-- anchor tag -->
+                <img width="96" src="https://www.pexels.com/photo/cactus-8795289/" alt="a cactus for you"/>
             </a>
         </nav>
         <form style="background-color: cornflowerblue;"> <!-- form tag wraps up different input tags -->
@@ -45,9 +45,9 @@
         </form>
     </header>
     <main>
-        <iframe src="http://www.w3.org/" frameborder="0" width="400">w3 homepage</iframe> <!-- iframe is used to show another website inside of your website -->
+        <!-- <iframe src="http://www.w3.org/" frameborder="0" width="400">w3 homepage</iframe> <!-- iframe is used to show another website inside of your website -->
         <video src="../../images/Why_are_you_gay.mp4" alt="nooo" muted loop poster="../../images/vicky.jpg" width="160" controls></video> </video>
-        <video src="../../images/brah.m4a" autoplay controls></video>
+        <video src="../../images/brah.m4a" autoplay controls></video> -->
         <h1>I'm testing</h1> <!--header tags (h1 to h6)-->
         <article>   <!-- article tag it includes several sections-->
             <section>
@@ -89,7 +89,7 @@
     </main>
     <footer>
         <ul>    <!-- unordered list -->
-            <li><a href="https://www.eminem.com">eminem</a></li> <!-- list item -->
+            <li><a href="https://en.wikipedia.org/wiki/Eminem">eminem</a></li> <!-- list item -->
             <li>snoopdogg</li>
                 <ol type="A">   <!-- ordered list (define type for bullets)-->
                     <li>still D.R.E.</li>
