--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </header>
     <main>
         <!-- <iframe src="http://www.w3.org/" frameborder="0" width="400">w3 homepage</iframe> <!-- iframe is used to show another website inside of your website -->
-        <video src="../../images/Why_are_you_gay.mp4" alt="nooo" muted loop poster="../../images/vicky.jpg" width="160" controls></video> </video>
-        <video src="../../images/brah.m4a" autoplay controls></video> -->
+        <!-- <video src="../../images/Why_are_you_gay.mp4" alt="nooo" muted loop poster="../../images/vicky.jpg" width="160" controls></video> </video> -->
+        <!-- <video src="../../images/brah.m4a" autoplay controls></video> -->
         <h1>I'm testing</h1> <!--header tags (h1 to h6)-->
         <article>   <!-- article tag it includes several sections-->
             <section>
