--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav> <!-- navigation tag -->
             <p id="#top">this is top</p> <!-- id element is used to create identity of a particular tag-->
             <a href="https://github.com/armorate" > <!-- anchor tag -->
-                <img width="96" src="https://www.pexels.com/photo/cactus-8795289/" alt="a cactus for you"/>
+                <img width="96" height="121" src="https://www.pexels.com/photo/cactus-8795289/" alt="a cactus for you"/>
             </a>
         </nav>
         <form style="background-color: cornflowerblue;"> <!-- form tag wraps up different input tags -->
