--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     h2  {font-size: 13px;}
     </style>
 </head>
-<body style="background-color: black;">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
+<body style="background-color: rgb(51, 62, 100;">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
             <p id="#top">this is top</p> <!-- id element is used to create identity of a particular tag-->
