--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </main>
     <footer>
         <ul>    <!-- unordered list -->
-            <li><a href="https://www.eminem.com">eminem</a></li> <!-- list item -->
+            <li><a href="https://en.wikipedia.org/wiki/Eminem">eminem</a></li> <!-- list item -->
             <li>snoopdogg</li>
                 <ol type="A">   <!-- ordered list (define type for bullets)-->
                     <li>still D.R.E.</li>
