--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important definition for website look on defferent platforms -->
     <title>Test Doc</title>
     <style>
-    h1  {color:blue; font-size: 25px;}
+    h1  {color:blueviolet; font-size: 25px;}
     p   {font-size: 19px;}
     h2  {font-size: 13px;}
     </style>
