--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <input type="file" value="photo"/><input type="date" value="DOB"/>
             <textarea rows="3" cols="32">write about youself</textarea>
             <p>your fav movie?</p>
-            <input type="checkbox" value="taxi driver" id=""/>taxi driver  <!-- checkboxes - we can select multiple boxes here -->
+            <input type="checkbox" checked value="taxi driver" id=""/>taxi driver  <!-- checkboxes - we can select multiple boxes here -->
             <input type="checkbox" value="green book" id=""/>green book 
             <p>you wanna study?</p>
             <input name="btn1" type="radio" value="php"/>PHP <!-- radio boxes - we can select only one box if the boxes have same name(identity) -->
