--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <article>   <!-- article tag it includes several sections-->
             <section>
             <p style="color: rosybrown; background-color: blue;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> <!-- paragraph tag --> <hr>
+            <img src="media/jupiter.jpg" alt="jupiter" width="400">
+            <p style="width: 40%;" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam consequuntur quia a placeat dolor officiis fuga, quae expedita sit doloremque dicta. Explicabo rerum natus soluta debitis! Itaque quibusdam non, optio quo assumenda ab fugit nesciunt accusamus?</p>
             </section>
             <section>
             <p>The <big>adhere</big>    <!--HTML kills white space-->        Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
