--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
             </a>
         </nav>
-        <form style="background-color: cornflowerblue;"> <!-- form tag wraps up different input tags -->
+        <form style="background-color: rgb(23, 31, 44);"> <!-- form tag wraps up different input tags -->
             <label for="login">details</label>  <!-- it's just a label-->
             <input type="text" value="username"/>   <input type="password" placeholder="password" />  <!-- input tag (it has many type inputs see w3 list)-->
             <button type="button">submit</button>   <br>
