--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- In HTML code is executed line by line. HTML is not case sensitive -->
 <html lang="en">
 <head>
-    <!-- The <head> is not a  part of the page.
-    it only contains title and style info -->
+    <!-- The <head> is not a  part of the page. it only contains title and style info -->
     <meta charset="UTF-8">
     <meta name="description" content="armorate's website">
     <meta name="auther" content="armorate">
@@ -10,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important definition for website look on defferent platforms -->
     <title>Test Doc</title>
+    <link rel="stylesheet" href="test.css">
     <style>
     h1  {color:blueviolet; font-size: 25px;}
     p   {font-size: 19px;}
@@ -19,7 +19,8 @@
 <body style="background-color: rgb(51, 62, 100);">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
-            <p id="#top">this is top</p> <!-- id element is used to create identity of a particular tag-->
+            <h4 id="#top">this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <h5>armorate HERE</h5>
             <a href="https://en.wikipedia.org/wiki/Main_Page" > wikipedia today <!-- anchor tag -->
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
             </a>
@@ -45,11 +46,13 @@
         </form>
     </header>
     <main>
+        <article>    <!-- article tag it includes several sections-->
+            <section>
         <!--    <iframe src="http://www.w3.org/" frameborder="0" width="400">w3 homepage</iframe>   --> <!-- iframe is used to show another website inside of your website -->
         <!-- <video src="../../images/Why_are_you_gay.mp4" alt="nooo" muted loop poster="../../images/vicky.jpg" width="160" controls></video> </video>
         <video src="../../images/brah.m4a" autoplay controls></video>   -->
         <h1>I'm testing</h1> <!--header tags (h1 to h6)-->
-        <article>   <!-- article tag it includes several sections-->
+            </section>
             <section>
             <p style="color: rosybrown; background-color: blue;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> <!-- paragraph tag --> <hr>
             <img src="media/jupiter.jpg" alt="jupiter" width="400">
@@ -87,7 +90,6 @@
                 <div> div2 </div>
             </section>
         </article>  
-        <h2 style="color: blueviolet; font-size: 16px;"> Armorate's HERE   </h2>
     </main>
     <footer>
         <ul>    <!-- unordered list -->
@@ -108,4 +110,3 @@
     </footer>
 </body>
 </html>
-
