--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     h2  {font-size: 13px;}
     </style>
 </head>
-<body style="background-color: rgb(51, 62, 100);">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
+<body style="background-color: rgb(5, 7, 15); ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
             <h4 id="top">this is top</h4> <!-- id element is used to create identity of a particular tag-->
@@ -34,7 +34,7 @@
             <p class="st1">your fav movie?</p> <!-- class attribute for particular css style call -->
             <input type="checkbox" checked value="taxi driver" id=""/>taxi driver  <!-- checkboxes - we can select multiple boxes here -->
             <input type="checkbox" value="green book" id=""/>green book 
-            <p class="st1 st2">you wanna study?</p> <!-- we can add multiple class references -->
+            <p class="st1 st2">you wanna study?</p> <!-- we can add multiple class selectors -->
             <input name="btn1" type="radio" value="php"/>PHP <!-- radio boxes - we can select only one box if the boxes have same name(identity) -->
             <input name="btn1" type="radio" value="javascript"/>javascript 
             <select name="languages" id=""> <!-- select tag gives an dropdown option to select an option and we add options using option tag inside it -->
