--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body style="background-color: rgb(5, 7, 15); ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
-            <h4 id="top">this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <div class="outer">
+                <div class="inner" ></div>
+            </div>  <!-- only works with div tag -->
             <h5>armorate HERE</h5>
             <a href="https://en.wikipedia.org/wiki/Main_Page" > wikipedia today <!-- anchor tag -->
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
@@ -31,10 +34,10 @@
             <button type="button">submit</button>   <br>
             <input type="file" value="photo"/><input type="date" value="DOB"/>
             <textarea rows="3" cols="32">write about youself</textarea>
-            <p class="st1">your fav movie?</p> <!-- class attribute for particular css style call -->
+            <p class="st1">your fav movie?</p> <!-- class selector for particular css style call -->
             <input type="checkbox" checked value="taxi driver" id=""/>taxi driver  <!-- checkboxes - we can select multiple boxes here -->
             <input type="checkbox" value="green book" id=""/>green book 
-            <p class="st1 st2">you wanna study?</p> <!-- we can add multiple class selectors -->
+            <p class="st2 st3">you wanna study?</p> <!-- we can add multiple class selectors -->
             <input name="btn1" type="radio" value="php"/>PHP <!-- radio boxes - we can select only one box if the boxes have same name(identity) -->
             <input name="btn1" type="radio" value="javascript"/>javascript 
             <select name="languages" id=""> <!-- select tag gives an dropdown option to select an option and we add options using option tag inside it -->
