--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
     <link rel="stylesheet" href="test.css">
     <style>
     h1  {color:blueviolet; font-size: 25px;}
-    p   {font-size: 19px;}
     h2  {font-size: 13px;}
     </style>
 </head>
-<body style="background-color: rgb(5, 7, 15); ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
+<body style="background-color: rgb(5, 7, 15);  ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
             <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
             <div class="outer">
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
+            <p class="relative1">relative1</p>
+            <div style="font-size: 36px;">
+                <p class="relative2">relative2</p>
+                <p class="relative3">relative3</p>
+                <p class="absolute">fixed</p>
+            </div>
             <h5>armorate HERE</h5>
             <a href="https://en.wikipedia.org/wiki/Main_Page" > wikipedia today <!-- anchor tag -->
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
