--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- In HTML code is executed line by line. HTML is not case sensitive -->
+<!DOCTYPE html> <!-- In HTML, code is executed line by line.HTML is not case sensitive -->
 <html lang="en">
 <head>
     <!-- The <head> is not a  part of the page. it only contains title and style info -->
@@ -19,11 +19,13 @@
     <header>
         <nav> <!-- navigation tag -->
             <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <div class="banner"></div>
+            <div class="banner2"></div>
             <div class="outer">
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
             <p class="relative1">relative1</p>
-            <div style="font-size: 36px;">
+            <div class="f1" style="font-size: 36px;">
                 <p class="relative2">relative2</p>
                 <p class="relative3">relative3</p>
                 <p class="absolute">fixed</p>
@@ -64,10 +66,12 @@
             <section>
             <p style="color: rosybrown; background-color: blue;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> <!-- paragraph tag --> <hr>
             <img src="media/jupiter.jpg" alt="jupiter" width="400">
-            <p style="width: 40%;" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam consequuntur quia a placeat dolor officiis fuga, quae expedita sit doloremque dicta. Explicabo rerum natus soluta debitis! Itaque quibusdam non, optio quo assumenda ab fugit nesciunt accusamus?</p>
+            <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam consequuntur quia a placeat dolor officiis fuga, quae expedita sit doloremque dicta. Explicabo rerum natus soluta debitis! Itaque quibusdam non, optio quo assumenda ab fugit nesciunt accusamus?</p>
+            <hr style="color: cornsilk;">
+            <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque optio hic illum dolor fugiat iure, eveniet architecto deserunt laborum nisi, cupiditate nobis libero eius reiciendis?</p>
             </section>
             <section>
-            <p>The <big>adhere</big>    <!--HTML kills white space-->        Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
+            <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
             </section>
             <section>
                 <table> <!-- table tag -->
@@ -97,7 +101,7 @@
                 <div> div1 </div> <!-- div is a block element which means it captures the whole width of the page or means that you can't add any other stuff in the same line as div -->
                 <div> div2 </div>
             </section>
-        </article>  
+        </article>
     </main>
     <footer>
         <ul>    <!-- unordered list -->
