--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important definition for website look on defferent platforms -->
     <title>Test Doc</title>
     <link rel="stylesheet" href="test.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
     <style>
     h1  {color:blueviolet; font-size: 25px;}
     h2  {font-size: 13px;}
@@ -19,7 +22,7 @@
     <header>
         <nav> <!-- navigation tag -->
             <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
-            <div class="banner"></div>
+            <div class="banner">hdt</div>
             <div class="banner2"></div>
             <div class="outer">
                 <div class="inner" ></div>
