--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="relative3">relative3</p>
                 <p class="absolute">fixed</p>
             </div>
-            <h5>armorate HERE</h5>
+            <h5 class="st3">armorate HERE</h5>
             <a href="https://en.wikipedia.org/wiki/Main_Page" > wikipedia today <!-- anchor tag -->
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
             </a>
@@ -99,10 +99,21 @@
             </section>
             <section>
                 <span> span1 </span> <!-- span is an inline element which means it only captures the space needed or it doesn't captures the full width of the page -->
-                <span> span2 </span>
+                    <p> 12 </p>
+                    <h5> 134 </h5>
+                <span class="el1">       SPAN is HERE          </span>
+                    <p class="el1"> 34f </p>
+                    <h6 class="el1"> fr5 </h6>
+                    <p class="el1">span2</p>
+
             </br><hr>
                 <div> div1 </div> <!-- div is a block element which means it captures the whole width of the page or means that you can't add any other stuff in the same line as div -->
                 <div> div2 </div>
+                <div class="el2">        DIV is HERE        </div>
+                    <p class="el2"> 34f </p>
+                    <h6 class="el2"> fr5 </h6>
+                    <p class="el2">span2</p>
+
             </section>
         </article>
     </main>
