--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                 <p class="relative3">relative3</p>
                 <p class="absolute">fixed</p>
             </div>
+            <div class="div1">
+                <div class="d01">none</div>
+                <div class="d02">opacity-0</div>
+                <div class="d03">opacity-1</div>
+                <div class="d04">opacoty-n</div>
+                <div class="d05">visibility</div>
+            </div>
+                <div><p class="box1">with border-box</p></div>
+                <div><p class="box2">nothing</p></div>
+                <div><p class="box3">without border-box</p></div>
             <h5 class="st3">armorate HERE</h5>
             <a href="https://en.wikipedia.org/wiki/Main_Page" > wikipedia today <!-- anchor tag -->
                <!-- <img width="96" height="34" src="../../images/vicky.jpg" alt="Wikipedia today"/> -->
@@ -120,11 +130,16 @@
     <footer>
         <ul>    <!-- unordered list -->
             <li><a href="https://en.wikipedia.org/wiki/Eminem">eminem</a></li> <!-- list item -->
+            <li><a href="#">homepage</a></li>
+            <li><a href="#">the last page</a></li>
+            <li><a href="#">abottus</a></li>
+            <li><a href="#">4home</a></li>
             <li>snoopdogg</li>
                 <ol type="A">   <!-- ordered list (define type for bullets)-->
-                    <li>still D.R.E.</li>
-                    <li>singh is king</li>
-                </ol>
+                    <li><a class="ul11" href="#">41home</a></li>
+                    <li><a class="ul11" href="#">42home</a></li>
+                    <li><a class="ul11" href="#">43home</a></li>
+                    <li><a class="ul11" href="#">44home</a></li>
         </ul>
         <dl>    <!-- description list -->
             <dt>Mango</dt> <!-- description term -->
