--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="d03">opacity-1</div>
                 <div class="d04">opacoty-n</div>
                 <div class="d05">visibility</div>
+                <div class="d03">opacity-1</div>
             </div>
                 <div><p class="box1">with border-box</p></div>
                 <div><p class="box2">nothing</p></div>
