--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
     <style>
     h1  {color:blueviolet; font-size: 25px;}
-    h2  {font-size: 13px;}
+    h2  {font-size: 13px; color: crimson;}
     </style>
 </head>
 <body style="background-color: rgb(5, 7, 15);  ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
@@ -40,6 +40,12 @@
                 <div class="d04">opacoty-n</div>
                 <div class="d05">visibility</div>
                 <div class="d03">opacity-1</div>
+            </div>
+            <div class="big-img">
+                <h2>Big Image</h2>
+            </div>
+            <div class="small-img">
+                <h2>small Image</h2>
             </div>
                 <div><p class="box1">with border-box</p></div>
                 <div><p class="box2">nothing</p></div>
