--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
             </section>
             <section>
+                <div class="d1"></div>
+                <div class="2d"></div>
+                <div class="3d"></div>
+                <div class="4d"></div>
+                <div class="5d"></div>
+                <div class="6d"></div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
