--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             </section>
             <section>
                 <div class="d1"></div>
-                <div class="2d"></div>
-                <div class="3d"></div>
-                <div class="4d"></div>
-                <div class="5d"></div>
-                <div class="6d"></div>
+                <div class="d2"></div>
+                <div class="d3"></div>
+                <div class="d4"></div>
+                <div class="d5"></div>
+                <div class="d6"></div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
