--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
                 <div class="d4"></div>
                 <div class="d5"></div>
                 <div class="d6"></div>
+                <div class="op1">
+                    <h2>hello hello</h2>
+                </div>
+                <div class="op2">
+                    <h2>why are u.</h2>
+                </div>
+                <div class="op3">
+                    <img src="/media/beach.jpg" alt="bitch">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione itaque perspiciatis eum quidem suscipit. Aliquid adipisci quis maxime nisi inventore qui, ducimus, veritatis, obcaecati facere iusto suscipit praesentium? Magnam sunt culpa voluptate, nesciunt sed ducimus inventore repudiandae repellendus, nemo facere praesentium accusamus cupiditate.</p>
+                </div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
