--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
                     <h2>why are u.</h2>
                 </div>
                 <div class="op3">
-                    <img src="/media/beach.jpg" alt="bitch">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione itaque perspiciatis eum quidem suscipit. Aliquid adipisci quis maxime nisi inventore qui, ducimus, veritatis, obcaecati facere iusto suscipit praesentium? Magnam sunt culpa voluptate, nesciunt sed ducimus inventore repudiandae repellendus, nemo facere praesentium accusamus cupiditate.</p>
+                    <img class="op4" src="/media/beach.jpg" alt="beach">
+                    <img class="op5" src="/media/beach.jpg" alt="beach">
+                    <p class="op6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione itaque perspiciatis eum quidem suscipit. Aliquid adipisci quis maxime nisi inventore qui, ducimus, veritatis, obcaecati facere iusto suscipit praesentium? Magnam sunt culpa voluptate, nesciunt sed ducimus inventore repudiandae repellendus, nemo facere praesentium accusamus cupiditate.</p>
                 </div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
