--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                     <img class="op5" src="/media/beach.jpg" alt="beach">
                     <p class="op6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione itaque perspiciatis eum quidem suscipit. Aliquid adipisci quis maxime nisi inventore qui, ducimus, veritatis, obcaecati facere iusto suscipit praesentium? Magnam sunt culpa voluptate, nesciunt sed ducimus inventore repudiandae repellendus, nemo facere praesentium accusamus cupiditate.</p>
                 </div>
+                <div class="d11">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
+                <div class="d12">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
+                <div class="d13">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
