--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                 <div class="d11">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
                 <div class="d12">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
                 <div class="d13">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
+                <div class="d20">
+                    <p class="d21">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem iste et explicabo nulla optio autem quae placeat nisi quibusdam dolor ex nam commodi recusandae eius ratione velit omnis porro repudiandae, perferendis doloribus.
+                    </p>
+                    <p class="d22">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum alias earum unde incidunt quos explicabo cupiditate? At hic magnam ipsum repudiandae quia, illo dolorem commodi cupiditate magni sequi nisi eum earum vero odit.<span class="d23">absolute d23</span></p>
+                </div>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
