--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
     <header>
         <nav> <!-- navigation tag -->
             <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <p class="p01">Lorem ipsum dolor sit.</p>
             <div class="banner">hdt</div>
             <div class="banner2"></div>
             <div class="outer">
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
         </nav>
+        <div class="img1">
+            <img src="/media/beach.jpg" class="i1" alt="">
+            <img src="/media/jupiter.jpg" class="i2" alt="">
+            <img src="/media/beach.jpg" class="i3" alt="">
+            <img src="/media/jupiter.jpg" class="i4" alt="">
+        </div>
             <p class="relative1">relative01</p>
             <div class="f1" style="font-size: 36px;">
                 <p class="relative2">relative2</p>
