--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="d13">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati incidunt dolor deserunt debitis recusandae,</div>
                 <div class="d20">
                     <span class="d21">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Lorem, adipisicing elit.
                     </span>
                     <p class="d22">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum alias earum unde incidunt quos explicabo cupiditate? At hic magnam ipsum repudiandae quia, illo dolorem commodi cupiditate magni sequi nisi eum earum vero odit.<span class="d23">absolute d23</span></p>
                 </div>
