--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
         </nav>
+        <div class="img2">
+            <img class="i5" src="/media/jupiter.jpg" alt=" ">
+        </div>
         <div class="img1">
             <img src="/media/beach.jpg" class="i1" alt="">
             <img src="/media/jupiter.jpg" class="i2" alt="">
