--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
         </nav>
+        <div id="test1">
+        <h1>First Heading.</h1>
+        </div>
+        <div class="test1">
+            <ul>
+                <li>
+                    <h1>Second Heading.</h1>
+                </li>
+            </ul>
+        </div>
+        <p class="p42">Hello G Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic voluptatibus maiores qui iusto, debitis beatae consequatur fugit saepe ipsam similique accusamus odio ut molestias. Beatae asperiores rerum ut porro deserunt dolorum ullam totam sed, culpa distinctio rem voluptatem eaque dolor, blanditiis ratione quidem soluta, optio eum!</p>
         <div class="img2">
             <img class="i5" src="/media/jupiter.jpg" alt=" ">
         </div>
