--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
         </nav>
+        <div style="margin: 30px auto;">    
+        <a class="al" href="#fef">general link </a> 
+        <a class="al" href="#fe">visited link</a>  
+        <a class="al" href="#ef">hover link</a>    
+        <a class="al" href="#dfe">active link</a>  
+        </div>
         <div id="test1">
         <h1>First Heading.</h1>
         </div>
