--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
             <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
             </section>
             <section>
+                <div class="t1"></div>
+                <div class="t2"></div>
+                <div class="t3"></div>
+                <p>nest<br></p>
                 <div class="d1"></div>
                 <div class="d2"></div>
                 <div class="d3"></div>
