--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <section>
                 <div class="t1"></div>
                 <div class="t2"></div>
-                <div class="t3"></div>
+                <div class="t3"></div><br>
                 <div class="t4"></div>
                 <div class="t5"></div>
                 <div class="t6"></div>
