--- a/index.html
+++ b/index.html
@@ -127,7 +127,14 @@
                 <div class="t4"></div>
                 <div class="t5"></div>
                 <div class="t6"></div>
-                <p>nest<br></p>
+                <p>nest0<br></p>
+                <div class="t11">default</div>
+                <div class="t12">ease</div>
+                <div class="t13">linear</div>
+                <div class="t14">ease-in</div>
+                <div class="t15">ease-out</div>
+                <div class="t16">ease-in-out</div>
+                <p>nest1<br></p>
                 <div class="d1"></div>
                 <div class="d2"></div>
                 <div class="d3"></div>
