--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                 <div class="t15">ease-out</div>
                 <div class="t16">ease-in-out</div>
                 <p>nest1<br></p>
+                <div class="transition">transition</div>
+                <div class="animation">animation</div>
+                <p>nest2<br></p>
                 <div class="d1"></div>
                 <div class="d2"></div>
                 <div class="d3"></div>
