--- a/index.html
+++ b/index.html
@@ -118,7 +118,14 @@
             <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque optio hic illum dolor fugiat iure, eveniet architecto deserunt laborum nisi, cupiditate nobis libero eius reiciendis?</p>
             </section>
             <section>
-            <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
+                <h1 class="h11">A1 heading</h1>
+                <p class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex, ipsum necessitatibus dolor similique, eligendi totam, facere quidem eveniet minima repellendus iusto voluptatem ipsa.</p>
+                <div class="d31">
+                    <p class="text2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus tempore consequuntur totam, nihil repellat inventore praesentium. Temporibus maiores illum perspiciatis distinctio sit!</p>
+                </div>
+                <h3 class="h12"> A2 heading</h3>
+                <h3 class="h13"> A3 heading</h3>
+                <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
             </section>
             <section>
                 <div class="t1"></div>
