--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <div class="d31">
                     <p class="text2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus tempore consequuntur totam, nihil repellat inventore praesentium. Temporibus maiores illum perspiciatis distinctio sit!</p>
                 </div>
+                <div class="box11"></div>
                 <h3 class="h12"> A2 heading</h3>
                 <h3 class="h13"> A3 heading</h3>
                 <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
