--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
                 <div class="box11"></div>
                 <h3 class="h12"> A2 heading</h3>
                 <h3 class="h13"> A3 heading</h3>
+                <div class="nav1">
+                    ....
+                </div>
+                <div class="banner1"></div>
+                <div class="footer1"></div>
                 <p>The <big>adhere</big>    <!--HTML kills white space-->     Accusantium <strong>H<sub>2</sub>O  (10)<sup>3</sup> hic </strong>natus <b>sint <i>mint</b> omnis</i> voluptatum ad,<br/> eaque quis!</p> <!-- different useful tags for texts-->
                 <br><hr><br><br><br><br>
             </section>
