--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque optio hic illum dolor fugiat iure, eveniet architecto deserunt laborum nisi, cupiditate nobis libero eius reiciendis?</p>
             </section>
             <section>
+                <h1 class="tt3 red43 p67"></h1> <!-- we can add multiple classes to one element-->
+                <h1 id="r43" class="r44 cd3"></h1>  <!-- we cannot add multiple id to an element-->
                 <h1 class="h11">A1 heading</h1>
                 <p class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex, ipsum necessitatibus dolor similique, eligendi totam, facere quidem eveniet minima repellendus iusto voluptatem ipsa.</p>
                 <div class="d31">
