--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body style="background-color: rgb(5, 7, 15);  ">  <!-- body of the page OR actual content (divided in 3 parts- header, main and footer) -->
     <header>
         <nav> <!-- navigation tag -->
-            <h4 id="top"  >this is top</h4> <!-- id element is used to create identity of a particular tag-->
+            <h4 id="top"  >This is TOP!</h4> <!-- id element is used to create identity of a particular tag-->
             <p class="p01">Lorem ipsum dolor sit.</p>
             <div class="banner">hdt</div>
             <div class="banner2"></div>
