--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <p class="d22">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum alias earum unde incidunt quos explicabo cupiditate? At hic magnam ipsum repudiandae quia, illo dolorem commodi cupiditate magni sequi nisi eum earum vero odit.<span class="d23">absolute d23</span></p>
                 </div>
                     <p class="d24">Lorem, ipsum dolor sit amet consctetur adipisicing elit. Esse vitae ipsum eaque magnam commodi repellendus velit quod aliquam explicabo natus laboriosam consequuntur assumenda oloribus cupiditate pariatur fuga quidem nisi ea dolorum voluptatem voluptas, est totam! Quo voluptas nam molestiae nihil quam, deserunt doloribus necessitatibus adipisci, suscipit, officia quidem. Dolorem dlorem700 Lorem ipsum dolr sit amet consectetur adipisicing elit. Ut, magni non. Laudantium cumque consequuntur quidem pellat ratione ullam, molestias inventore iste quo. In distinctio optio dolore soluta harum natures a iste in distinctio voluptatibus possimus quasi. Molestiae.</p>
-                    <a class="d25" type="button" href="#top">A button</a>
+                    <a class="d25" type="button" href="#top">A fixed button</a>
                 <table> <!-- table tag -->
                     <thead> <!-- head part of the table -->
                     <caption><h5>fruits and color</h5></caption> <!-- table heading or name -->
