--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 <div class="d5"></div>
                 <div class="d6"></div>
                 <div class="op1">
-                    <h2>hello hello</h2>
+                    <h1>HELLO</h1>
                 </div>
                 <div class="op2">
-                    <h2>why are u.</h2>
+                    <h3>change its color(flexbox).</h3>
                 </div>
                 <div class="op3">
                     <img class="op4" src="/media/beach.jpg" alt="beach">
