--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             </section>
             <section>
                 <div class="t1"></div>
-                <div class="t2"></div>
+                <div class="t2"></div><hr>
                 <div class="t3"></div><br>
-                <div class="t4"></div>
-                <div class="t5"></div>
+                <div class="t4"></div><br>
+                <hr><div class="t5"></div><hr>
                 <div class="t6"></div>
                 <p>nest0<br></p>
                 <div class="t11">default</div>
