--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav> <!-- navigation tag -->
             <h4 id="top"  >This is TOP!</h4> <!-- id element is used to create identity of a particular tag-->
             <p class="p01">Lorem ipsum dolor sit.</p>
-            <div class="banner">hdt</div>
+            <div class="banner">banner1</div>
             <div class="banner2"></div>
             <div class="outer">
                 <div class="inner" ></div>
