--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h4 id="top"  >This is TOP!</h4> <!-- id element is used to create identity of a particular tag-->
             <p class="p01">Lorem ipsum dolor sit.</p>
             <div class="banner">banner1</div>
-            <div class="banner2"></div>
+            <div class="banner2">banner2</div>
             <div class="outer">
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
