--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="inner" ></div>
             </div>  <!-- only works with div tag -->
         </nav>
-        <div style="margin: 30px auto;">    
+        <div style="margin: 30px auto; text-align: center;">    
         <a class="al" href="#fef">general link </a> 
         <a class="al" href="#fe">visited link</a>  
         <a class="al" href="#ef">hover link</a>    
