--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <p class="p00">
           I do like the dark humor movies like sausage party and Lorem ipsum
           dolor sit amet consectetur adipisicing elit. Quisquam vel non
-          reprehenderit dolorem ad id, delectus cumque debitis voluptates soluta
-          necessitatibus deserunt officiis.
+          reprehenderit dolorem ad id, delectus cumque debitis voluptates
+          deserunt officiis.
         </p>
         <p class="p01">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-          repudiandae sed, doloremque, saepe sequi esse id amet cupiditate culpa
-          qui rem dolorum nostrum enim laudantium non aspernatur soluta.
-          Sapiente, magni!
+          repudiandae sed, doloremque, saepe esse id amet cupiditate culpa qui
+          rem dolorum nostrum enim laudantium non aspernatur soluta. Sapiente,
+          magni!
         </p>
       </div>
     </main>
