--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://armorate.github.io/media/alpha64.png" />
     <link rel="stylesheet" href="test.css" />
     <title>test-host</title>
   </head>
