--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
           magni!
         </p>
       </div>
+      <div>
+        <ul>
+          <a href="https://armorate.github.io/hostest"
+            ><p class="ul00">rough test-host</p></a
+          >
+        </ul>
+      </div>
     </main>
     <footer>
       <a class="a00" href="#top"><p class="p02">back to top</p></a>
