--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://armorate.github.io/media/alpha32.png" />
     <link rel="stylesheet" href="test.css" />
-    <title>test-host</title>
+    <title>armorate</title>
   </head>
   <body>
     <header>
