--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <p id="top"></p>
-      <h1 class="h100">armorate</h1>
+      <a class="a_h1" href="https://github.com/armorate"
+        ><h1 class="h100">armorate</h1></a
+      >
     </header>
     <main>
       <div>
