adjusted reference links and added my github calc(under design) link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       >
     </header>
     <main>
-      <div>
+      <div class="div00">
         <p class="p00">
           I do like the dark humor movies like sausage party and Lorem ipsum
           dolor sit amet consectetur adipisicing elit. Quisquam vel non
@@ -30,10 +30,13 @@
           magni!
         </p>
       </div>
-      <div>
+      <div class="div01">
         <!-- <ul> -->
         <a href="https://armorate.github.io/hostest"
           ><p class="ul00">rough test-host</p></a
+        >
+        <a href="https://github.com/armorate/xcal"
+          ><p class="ul01">a calculator</p></a
         >
         <!-- </ul> -->
       </div>
