chanded link name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="div01">
         <!-- <ul> -->
         <a href="https://armorate.github.io/hostest"
-          ><p class="ul00">rough test-host</p></a
+          ><p class="ul00">/hostest</p></a
         >
         <a href="https://github.com/armorate/xcal"
           ><p class="ul01">a calculator</p></a
