upgraded the link buttons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="div01">
         <!-- <ul> -->
         <a href="https://armorate.github.io/hostest"
-          ><p class="ul00">/hostest</p></a
+          ><p class="ul00">/:hostest</p></a
         >
         <a href="https://github.com/armorate/xcal"
-          ><p class="ul01">a calculator</p></a
+          ><p class="ul01">/:calculator</p></a
         >
         <!-- </ul> -->
       </div>
