--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </main>
     <footer>
-      <a class="a00" href="#top"><p class="p02">back to top</p></a>
+      <a class="a00" href="#top"><p class="p02">back to TOP</p></a>
     </footer>
   </body>
 </html>
