--- a/index.html
+++ b/index.html
@@ -26,18 +26,15 @@
         <p class="p01">
           Lorem ipsum dolor sit amet, consectectotur adipisicing elit. Fuga
           repudiandae sed, doloremque, saepe esse id amet cupiditate culpa qui
-          rem dolorum nostrum enim laudantium non aspernatur soluta. Sapiente,
-          magni!
+          rem dolorum nostrum non aspernatur soluta. Sapiente, magni!
         </p>
       </div>
       <div class="div01">
         <!-- <ul> -->
         <a href="https://armorate.github.io/hostest"
-          ><p class="ul00">/:hostest</p></a
+          ><p class="ul00">hostest</p></a
         >
-        <a href="https://github.com/armorate/xcal"
-          ><p class="ul01">/:calculator</p></a
-        >
+        <a href="https://github.com/armorate/xcal"><p class="ul01">xcal</p></a>
         <!-- </ul> -->
       </div>
     </main>
