--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="armorate, github, mainpage">
+  <meta name="description" content="The github page of armorate">
   <link rel="icon" href="https://armorate.github.io/media/alpha32.png">
   <link rel="stylesheet" href="test.css">
   <title>armorate</title>
