some changes in hyperlinks and created favMovies.html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 
 <body>
   <header>
-    <p id="top"></p>
-    <a class="a_h1" href="https://github.com/armorate">
-      <h1 class="h100">armorate</h1>
-    </a>
+    <a class="a_h1" href="https://github.com/armorate">armorate</a>
   </header>
   <main>
     <div class="div00">
       <p class="p00">
-        I do like the dark humor movies like sausage party and Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Quisquam vel non
+        I do like the dark humor <a href="other/favMovies.html">movies</a> like sausage party and Lorem ipsum dolor sit
+        amet
+        consectetur adipisicing elit. Quisquam vel non
         reprehenderit dolorem adpo id, delectus cumque debitis voluptates
         deserunt officiis.
       </p>
@@ -45,9 +43,7 @@
     </div>
   </main>
   <footer>
-    <a class="a00" href="#top">
-      <p class="p02">back to TOP</p>
-    </a>
+    <a href="#" class="p02">back to TOP</a>
   </footer>
 </body>
 
