addend email_me option and other changes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
       <a href="https://armorate.github.io/hostest">
         <p class="ul00">hostest</p>
       </a>
-      <a href="https://github.com/armorate/xcal">
+      <a href="https://armorate.github.io/xcal">
         <p class="ul01">xcal</p>
+      </a>
+      <a href="mailto:blinder404@gmail.com">
+        <p class="ul02">email me</p>
       </a>
       <!-- </ul> -->
     </div>
