capitalized first letter of paragraphs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
       <p class="p01">
         Lorem ipsum dolor sit amet, consectectotur adipisicing elit. Fuga
-        repudiandae sed, doloremque, saepe esse id amet cupiditate culpa qui
+        repudiandae sed, doloremque, saepe esse id amet cupiditate culpa qui14
         rem dolorum nostrum non aspernatur soluta. Sapiente, magni!
       </p>
     </div>
