--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class="div01">
       <!-- <ul> -->
-      <a href="https://armorate.github.io/hostest">
-        <p class="ul00">hostest</p>
+      <a href="https://armorate.github.io/newpage">
+        <p class="ul00">newpage</p>
       </a>
       <a href="https://armorate.github.io/xcal">
         <p class="ul01">xcal</p>
