added telegram hyperlink

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <a href="mailto:blinder404@gmail.com">
         <p class="ul02">email me</p>
       </a>
+      <a href="https://t.me/armorate">
+        <p class="ul03">telegram</p>
+      </a>
       <!-- </ul> -->
     </div>
   </main>
