external communication links will open in a new tab

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <a href="https://armorate.github.io/xcal">
         <p class="ul01">xcal</p>
       </a>
-      <a href="mailto:blinder404@gmail.com">
+      <a href="mailto:blinder404@gmail.com" target="_blank">
         <p class="ul02">email me</p>
       </a>
-      <a href="https://t.me/armorate">
+      <a href="https://t.me/armorate" target="_blank">
         <p class="ul03">telegram</p>
       </a>
       <!-- </ul> -->
