Modified some Content and hyperlinked projecteuler100 repository

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <div class="div00">
       <p class="p00">
-        I do like the dark humor <a href="other/favMovies.html">movies</a> like sausage party and Lorem ipsum dolor sit
+        I do like the humor <a href="other/favMovies.html">talk</a> party and Lorem ipsum dolor sit
         amet
         consectetur adipisicing elit. Quisquam vel non
         reprehenderit dolorem adpo id, delectus cumque debitis voluptates
@@ -38,6 +38,9 @@
       </a>
       <a href="https://armorate.github.io/xcal">
         <p class="ul01">xcal</p>
+      </a></a>
+      <a href="https://github.com/armorate/projecteuler100">
+        <p class="ul01">projecteuler100</p>
       </a>
       <a href="mailto:blinder404@gmail.com" target="_blank">
         <p class="ul02">email me</p>
