--- a/other/favMovies.html
+++ b/other/favMovies.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>armorate's favourite movies</title>
+    <title>kewl</title>
     <style>
         * {
             background-color: rgb(73, 71, 69);
@@ -25,27 +25,27 @@
 
 <body>
     <header>
-        <h2>My favourite movies...</h2>
+        <h2>kewls...</h2>
     </header>
     <main>
         <table>
             <thead>
                 <tr>
-                    <th colspan="3" style="text-align: center;">Movies</th>
+                    <th colspan="3" style="text-align: center;">tadon</th>
                 </tr>
             </thead>
             <tr>
                 <th>Name</th>
-                <th>Release</th>
+                <th>inception</th>
                 <th>Rating</th>
             </tr>
             <tr>
-                <td>Masaan</td>
+                <td>commentscure</td>
                 <td>2017</td>
                 <td>88</td>
             </tr>
             <tr>
-                <td>Pulp Fiction</td>
+                <td>Drypulp</td>
                 <td>1994</td>
                 <td>94</td>
             </tr>
