--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <main>
     <div class="div00">
       <p class="p00">
-        I do like the humor <a href="other/favMovies.html">talk</a> party and Lorem ipsum dolor sit
         amet
         consectetur adipisicing elit. Quisquam vel non
         reprehenderit dolorem adpo id, delectus cumque debitis voluptates
@@ -33,14 +32,14 @@
     </div>
     <div class="div01">
       <!-- <ul> -->
-      <a href="https://armorate.github.io/newpage">
-        <p class="ul00">newpage</p>
+      <a href="https://newgreen123.github.io/temp/beta">
+        <p class="ul00">hub</p>
       </a>
-      <a href="https://armorate.github.io/xcal">
-        <p class="ul01">xcal</p>
+      <a href="https://temp-5c97a3.gitlab.io/beta">
+        <p class="ul01">lab</p>
       </a></a>
-      <a href="https://github.com/armorate/projecteuler100">
-        <p class="ul01">projecteuler100</p>
+      <a href="https://armorate.codeberg.page/beta.html">
+        <p class="ul01">berg</p>
       </a>
       <a href="mailto:blinder404@gmail.com" target="_blank">
         <p class="ul02">email me</p>
